#**************
# p o e t r y *
#**************

[tool.poetry]
name = "finsy"
version = "0.19.0"
description = "P4Runtime Client Library"
license = "Apache-2.0"
authors = ["Bill Fisher <william.w.fisher@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/byllyfish/finsy"
classifiers = [
  "Development Status :: 3 - Alpha", 
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: AsyncIO",
]

[tool.poetry.urls]
"Release Notes" = "https://github.com/byllyfish/finsy/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/byllyfish/finsy/issues"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.57.0"
parsy = "^2.1.0"
pyee = "^11.0.0"
protobuf = "^4.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.1"
pdoc = "^14.0.0"
pyright = "^1.1.325"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
shellous = "^0.29.0"
prometheus-client = "^0.17.1"
ruff = "^0.0.287"

[tool.poetry.group.extra.dependencies]
pygraphviz = "^1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#**************
# p y t e s t *
#**************

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = '-s --log-cli-format="%(created).03f %(levelname)s %(name)s %(message)s" --log-cli-level=DEBUG --log-file-format="%(created).03f %(levelname)s %(name)s %(message)s"'
norecursedirs = ["examples"]

#****************
# p y r i g h t *
#****************

[tool.pyright]
ignore = [
  "finsy/proto/**/*_pb2.py", 
  "finsy/proto/**/*_pb2.pyi", 
  "finsy/proto/**/*_pb2_grpc.py", 
  "finsy/proto/**/*_pb2_grpc.pyi",
  "finsy/test/demonet_topo.py",
  "examples/tests/*.py"
]
strict = [
  "examples/**/*.py", 
  "finsy/**/*.py",
  "tests/test_p4data.py",
  "tests/test_p4entity.py",
  "tests/test_p4values.py",
  "tests/test_controller.py",
  "tests/test_switch.py"
]
useLibraryCodeForTypes = true

# Enable warnings not enabled by `strict`.
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

#************
# b l a c k *
#************

[tool.black]
target-version = ['py310']
required-version = "23.7.0"
force-exclude = "_pb2(_grpc)?\\.pyi?$"

#************
# i s o r t *
#************

[tool.isort]
profile = "black"
skip_glob = ["*_pb2.py", "*_pb2_grpc.py", ".venv*"]

#**************
# p y l i n t *
#**************

[tool.pylint.main]
ignore-patterns = [".*_pb2\\.py", ".*_pb2_grpc\\.py"]
ignore-paths = ["finsy/proto"]
ignored-modules = ["finsy.proto"]

[tool.pylint.basic]
good-names = ["i", "j", "k", "v", "ex", "Run", "_", "m", "s", "ee", "up", "id", "vt"]

[tool.pylint.design]
max-attributes = 15
min-public-methods = 0
max-public-methods = 25
max-branches = 15
max-returns = 10

[tool.pylint.format]
max-module-lines = 2500
max-line-length = 120

[tool.pylint."messages control"]
disable = [
  "wrong-import-position",
  "cyclic-import",
  "protected-access",
  "unnecessary-ellipsis",
]

[tool.pylint.variables]
allowed-redefined-builtins = ["format"]

#**********
# m y p y *
#**********

[tool.mypy]
disallow_untyped_defs = true
exclude = [ ".+_pb2.py", ".+_pb2_grpc.py" ]

#**********
# r u f f *
#**********

[tool.ruff]
select = ["E", "F", "D202", "PTH", "RET", "RUF", "W"]
ignore = [
  "S101",   # Use of `assert` detected
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
]
exclude = [
  "*_pb2.{py,pyi}", 
  "*pb2_grpc.{py,pyi}", 
  "typings/*.pyi", 
  "*/install-poetry.py",
  "*/demonet_topo.py",
]
line-length = 120

[tool.ruff.per-file-ignores]
"finsy/proto/__init__.py" = ["E402"]
"examples/int/demo/main.py" = ["F403", "F405"]

# Line too long (E501)
"examples/tests/*.py" = ["E501"]
".devcontainer/install-poetry.py" = ["E501"]
"finsy/test/gnmi_server.py" = ["E501"]
"tests/test_gnmistring.py" = ["E501"]
