[project]
name = "finsy"
version = "0.29.0"
description = "P4Runtime Client Library"
authors = [{ name = "Bill Fisher", email = "william.w.fisher@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio>=1.81.1,<2",
    "parsy>=2.2.0,<3",
    "protobuf>=6.33.6,<8",
    "pyee>=13.0.1,<14",
]

[project.optional-dependencies]
demonet = ["shellous>=0.40.0,<0.41"]

[project.urls]
Homepage = "https://github.com/byllyfish/finsy"
"Release Notes" = "https://github.com/byllyfish/finsy/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/byllyfish/finsy/issues"

[dependency-groups]
dev = [
    "black==26.5.1",
    "mypy>=2.1.0,<3",
    "pdoc>=16.0.0,<17",
    "prometheus-client>=0.25.0,<0.26",
    "pylint>=4.0.6,<5",
    "pyright>=1.1.410,<2",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.19,<0.16",
    "shellous>=0.40.0,<0.41",
]
demonet = ["pygraphviz>=1.13,<2"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

#**************
# p y t e s t *
#**************

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = '-s --log-cli-format="%(created).03f %(levelname)s %(name)s %(message)s" --log-cli-level=DEBUG --log-file-format="%(created).03f %(levelname)s %(name)s %(message)s"'
norecursedirs = ["examples"]

#****************
# p y r i g h t *
#****************

[tool.pyright]
ignore = [
  "finsy/proto/**/*_pb2.py", 
  "finsy/proto/**/*_pb2.pyi", 
  "finsy/proto/**/*_pb2_grpc.py", 
  "finsy/proto/**/*_pb2_grpc.pyi",
  "finsy/test/demonet_topo.py",
  "examples/tests/*.py"
]
strict = [
  "examples/**/*.py", 
  "finsy/**/*.py",
  "tests/conftest.py",
  "tests/test_p4data.py",
  "tests/test_p4entity.py",
  "tests/test_p4schema.py",
  "tests/test_p4values.py",
  "tests/test_controller.py",
  "tests/test_switch.py"
]
useLibraryCodeForTypes = true

# Enable warnings not enabled by `strict`.
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

#************
# b l a c k *
#************

[tool.black]
target-version = ['py310']
required-version = "26.5.1"
force-exclude = "_pb2(_grpc)?\\.pyi?$"

#************
# i s o r t *
#************

[tool.isort]
profile = "black"
skip_glob = ["*_pb2.py", "*_pb2_grpc.py", ".venv*"]

#**************
# p y l i n t *
#**************

[tool.pylint.main]
ignore-patterns = [".*_pb2\\.py", ".*_pb2_grpc\\.py"]
ignore-paths = ["finsy/proto"]
ignored-modules = ["finsy.proto"]

[tool.pylint.basic]
good-names = ["i", "j", "k", "v", "ex", "Run", "_", "m", "s", "ee", "up", "id", "vt"]

[tool.pylint.design]
max-attributes = 17
min-public-methods = 0
max-public-methods = 27
max-branches = 15
max-returns = 10

[tool.pylint.format]
max-module-lines = 2700
max-line-length = 120

[tool.pylint."messages control"]
disable = [
  "wrong-import-position",
  "cyclic-import",
  "protected-access",
  "unnecessary-ellipsis",
]

[tool.pylint.variables]
allowed-redefined-builtins = ["format"]

#**********
# m y p y *
#**********

[tool.mypy]
disallow_untyped_defs = true
exclude = [ ".+_pb2.py", ".+_pb2_grpc.py" ]

#**********
# r u f f *
#**********

[tool.ruff]
exclude = [
  "*_pb2.{py,pyi}", 
  "*pb2_grpc.{py,pyi}", 
  "typings/*.pyi", 
  "*/demonet_topo.py",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D202", "PTH", "RET", "RUF", "W"]
ignore = [
  "S101",   # Use of `assert` detected
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "RUF022", # `__all__` is not sorted
]

[tool.ruff.lint.per-file-ignores]
"finsy/proto/__init__.py" = ["E402"]
"examples/int/demo/main.py" = ["F403", "F405"]

# Line too long (E501)
"examples/tests/*.py" = ["E501"]
"finsy/test/gnmi_server.py" = ["E501"]
"tests/test_gnmistring.py" = ["E501"]
"tests/test_p4client.py" = ["E501"]
"tests/test_pbutil.py" = ["E501"]
